Use Paths.get instead of Path.of (jdk8 compliant)